fix the `z-index` of Stripe error containers

--- a/style/base/stripe.scss
+++ b/style/base/stripe.scss
@@ -7,6 +7,7 @@
 }
 #stripe-errors {
     display: block;
+    z-index: 1000;
     &:empty {
         display: none;
     }
